# pdf_stuff

./: README.md  entity_lst.json  parse_pdf.ipynb  pyproject.toml
