[tool.poetry]
name = "pdf-stuff"
version = "0.1.1"
description = "PDF stuff for Ole"
authors = ["christopher <christopher.coello@aiba.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
scikit-learn = "^1.4.1.post1"
PyPDF2 = "^3.0.1"
pymupdf = "^1.23.26" # fitz
openai = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
